--- a/modules/dspace-xmlui-lang/trunk/src/main/webapp/i18n/messages_de.xml
+++ b/modules/dspace-xmlui-lang/trunk/src/main/webapp/i18n/messages_de.xml
@@ -2,9 +2,9 @@
   <!--
   messages_de.xml
 
-  Version: $$
+  Version: $Revision: $
  
-  Date: $$
+  Date: $Date: $
  
   Copyright (c) 2002-2008, DSpace Foundation. All rights reserved.
  
@@ -1318,7 +1318,7 @@
 	<!-- org.dspace.app.xmlui.administrative.item.EditItemStatusForm -->
 	<message key="xmlui.administrative.item.EditItemStatusForm.title">Dokumentstatus</message>
 	<message key="xmlui.administrative.item.EditItemStatusForm.trail">Dokumentstatus</message>
-	<message key="xmlui.administrative.item.EditItemStatusForm.para1">Willkommen in der Dokumentverwaltung. Hier können Sie Dokumente verwerfen, wieder aktivier oder löschen. Zudem können Sie Metadaten und zugehörige Dateien bearbeiten, hinzufügen oder löschen.</message>
+	<message key="xmlui.administrative.item.EditItemStatusForm.para1">Willkommen in der Dokumentverwaltung. Hier können Sie Dokumente verwerfen, wieder aktivieren oder löschen. Zudem können Sie Metadaten und zugehörige Dateien bearbeiten, hinzufügen oder löschen.</message>
 	<message key="xmlui.administrative.item.EditItemStatusForm.label_id">Interne Dokument-ID</message>
 	<message key="xmlui.administrative.item.EditItemStatusForm.label_handle">Handle</message>
 	<message key="xmlui.administrative.item.EditItemStatusForm.label_modified">Letzte Änderung</message>
