--- a/modules/dspace-xmlui-lang/trunk/src/main/webapp/i18n/messages_es.xml
+++ b/modules/dspace-xmlui-lang/trunk/src/main/webapp/i18n/messages_es.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!--Translated to spanish by Lourdes Lidón Pascual Gargallo (fpascual@uji.es) at Universitat Jaume I de Castellon -->
+<!--Translated to spanish by Lourdes Lidón Pascual Gargallo (lpascual@uji.es) at Universitat Jaume I de Castellon -->
 <catalogue xml:lang="es" xmlns:i18n="http://apache.org/cocoon/i18n/2.1">
   <message key="xmlui.general.dspace_home">DSpace Principal</message>
   <message key="xmlui.general.search">Búsquedas</message>
