--- a/modules/dspace-xmlui-lang/trunk/src/main/webapp/i18n/messages_de.xml
+++ b/modules/dspace-xmlui-lang/trunk/src/main/webapp/i18n/messages_de.xml
@@ -1628,6 +1628,9 @@
 	<message key="xmlui.dri2xhtml.structural.pagination-previous">Vorherige Seite</message>
 	<message key="xmlui.dri2xhtml.structural.pagination-info">Anzeige der Dokumente {0}-{1} von {2}</message>
 	<message key="xmlui.dri2xhtml.structural.pagination-next">Nächste Seite</message>
+	
+	<message key="xmlui.dri2xhtml.structural.link_cc">Creative Commons Lizenz</message>
+	<message key="xmlui.dri2xhtml.structural.link_original_license">Originallizenz</message>
 		
 	
 	<!-- DS-METS-1.0-MODS.xsl -->
