Updated translation to DSpace 1.5.1

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_cy.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_cy.properties
@@ -646,6 +646,8 @@ jsp.mydspace.remove-item.cancel.button                          = Canslo Tynnu Y
 jsp.mydspace.remove-item.confirmation                           = A ydych chi'n si&#373;r eich bod am dynnu ymaith yr eitem anorffenedig ganlynol?
 jsp.mydspace.remove-item.remove.button                          = Tynnu'r Eitem Ymaith
 jsp.mydspace.remove-item.title                                  = Tynnu'r Eitem Ymaith
+jsp.mydspace.request.export.collection 							= Allforio Casgliad
+jsp.mydspace.request.export.item 								= Eitem
 jsp.mydspace.subscriptions.info1                                = Mae eich tanysgrifiadau wedi'u diweddaru.
 jsp.mydspace.subscriptions.info2                                = Er mwyn tanysgrifio i gasgliad, ewch i dudalen gartref y casgliad, a chliciwch ar y botwm "Tanysgrifio".
 jsp.mydspace.subscriptions.info3                                = Gweler isod y casgliadau y'ch tanysgrifiwyd iddynt. Anfonir e-bost dyddiol atoch yn rhoi manylion eitemau newydd sydd ar gael yn y casgliadau hyn. Nid anfonir e-bost pan nad oes eitemau newydd.
@@ -1325,6 +1327,7 @@ org.dspace.content.Collection.untitled                                          
 org.dspace.content.Community.untitled                                           = Dideitl
 org.dspace.eperson.LDAPAuthentication.title                                     = Rhowch NetID LDAP a Chyfrinair
 org.dspace.eperson.PasswordAuthentication.title                                 = Rhowch Enw Defnyddiwr a Chyfrinair DSpace
+org.dspace.eperson.Subscribe.authors 											= Awduron:
 org.dspace.eperson.Subscribe.id                                                 = Cyfeirnod: 
 org.dspace.eperson.Subscribe.new-items                                          = Eitemau Newydd:
 org.dspace.eperson.Subscribe.title                                              = Teitl:
