Updated Portuguese (Portugal) translation to 1.5.1

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_pt_PT.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_pt_PT.properties
@@ -1,5 +1,5 @@
-# Version: $Revision: 2784 $
-# Date:    $Date: 2008-03-03 20:57:59 -0800 (Mon, 03 Mar 2008) $
+# Version: $Revision: $
+# Date:    $Date: $
 
 browse.page-title = Percorrer o reposit&oacute;rio
 browse.et-al = et al.
@@ -652,6 +652,8 @@ jsp.mydspace.remove-item.cancel.button = Cancelar
 jsp.mydspace.remove-item.confirmation = Tem certeza que quer remover o seguinte registo incompleto?
 jsp.mydspace.remove-item.remove.button = Remover 
 jsp.mydspace.remove-item.title = Remover registo
+jsp.mydspace.request.export.collection = Exportar colec&ccedil;&atilde;o
+jsp.mydspace.request.export.item = Exportar registo
 jsp.mydspace.subscriptions.info1 = Os seus alertas foram actualizados.
 jsp.mydspace.subscriptions.info2 = Para activar um alerta numa colec&ccedil;&atilde;o, v&aacute; at&eacute; &agrave; p&aacute;gina principal da colec&ccedil;&atilde;o e clique no bot&atilde;o &quot;Activar Alerta&quot;. 
 jsp.mydspace.subscriptions.info3 = Em baixo tem os alertas activos. Ser-lhe-&aacute; enviado uma mensagem di&aacute;ria com os detalhes dos novos registos disponibilizados nestas colec&ccedil;&otilde;es. Em dias que n&atilde;o existam novos registos n&atilde;o ser&aacute; enviado o alerta.
@@ -1341,6 +1343,7 @@ org.dspace.content.Community.untitled = Sem t&iacute;tulo
 org.dspace.eperson.LDAPAuthentication.title = Introduza LDAP Netid e a palavra de acesso
 org.dspace.eperson.PasswordAuthentication.title = Introduza o nome do utilizador e a palavra de acesso
 org.dspace.eperson.X509Authentication.title = Entrar no reposit&oacute;rio com um certificado Web
+org.dspace.eperson.Subscribe.authors = Autores: 
 org.dspace.eperson.Subscribe.id = ID: 
 org.dspace.eperson.Subscribe.new-items = Novos Registos:
 org.dspace.eperson.Subscribe.title = T&iacute;tulo:
