Added missing header for Exported Ressources in the MyDSpace Page

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
@@ -597,6 +597,7 @@ jsp.mydspace.main.heading3                                      = Aufgabenpool
 jsp.mydspace.main.heading4                                      = Unvollendete Ver\u00F6ffentlichungen
 jsp.mydspace.main.heading5                                      = Ver\u00F6ffentlichungen, die sich noch im Gesch\u00E4ftsgang befinden.
 jsp.mydspace.main.heading6                                      = Gruppen, denen ich angeh\u00F6re
+jsp.mydspace.main.heading7                                      = Exportierte Ressourcen
 jsp.mydspace.main.item                                          = Ressource
 jsp.mydspace.main.link                                          = Ihre Abonnements einsehen
 jsp.mydspace.main.perform.button                                = Diese Aufgabe ausf\u00FChren
