Adjusted news names to i18n

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
@@ -1222,9 +1222,8 @@ metadata.dc.subject                 = Stichw\u00F6rter
 metadata.dc.title                   = Titel
 metadata.dc.title.alternative       = Sonstige Titel
 
-news-side.html = news-side.html
-
-news-top.html = news-top.html
+news-side.html = news-side_de.html
+news-top.html = news-top_de.html
 
 org.dspace.app.webui.jsptag.CollectionListTag.collectionName                    = Name der Sammlung
 org.dspace.app.webui.jsptag.CommunityListTag.communityName                      = Name des Bereiches
