Update to version 3363 of Messages.properties

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
@@ -751,6 +751,9 @@ jsp.search.advanced.type.series                                 = Serie
 jsp.search.advanced.type.sponsor                                = Sponsor
 jsp.search.advanced.type.subject                                = Schlagwort
 jsp.search.advanced.type.title                                  = Titel
+jsp.search.error.invalid-search-string                          = Ung\u00FCltige Suchanfrage
+jsp.search.error.number-format-exception                        = Falsches Zahlenformat
+jsp.search.error.query-too-broad                                = Ihre Suchanfrage war zu allgemein. Bitte schr\u00E4nken Sie diese ein.
 jsp.search.general.next                                         = Weiter
 jsp.search.general.noresults                                    = Suche f\u00FChrte zu keinem Treffer
 jsp.search.general.previous                                     = Zur\u00FCck
@@ -1223,6 +1226,7 @@ metadata.dc.title                   = Titel
 metadata.dc.title.alternative       = Sonstige Titel
 
 news-side.html = news-side_de.html
+
 news-top.html = news-top_de.html
 
 org.dspace.app.webui.jsptag.CollectionListTag.collectionName                    = Name der Sammlung
