Updated German translation to revision 3614

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
@@ -212,6 +212,7 @@ jsp.dspace-admin.confirm-delete-format.returntoedit             = Zur\u00FCck zu
 jsp.dspace-admin.confirm-delete-format.title                    = Dateiformat aus Referenzliste l\u00F6schen
 jsp.dspace-admin.confirm-delete-format.warning                  = Bei allen Dateien, denen dieses Format zugeordnet ist, wird das Format auf <em>unbekannt</em> gesetzt.
 jsp.dspace-admin.confirm-delete-mdfield.confirm                 = Sind Sie sicher, dass das Feld  <strong>{0}</strong> gel\u00F6scht werden soll?
+jsp.dspace-admin.confirm-delete-mdfield.failed                  = Es ist nicht m\u00F6glich dieses Metadatenfeld zu l\u00F6schen, da es von mindestens einem Item verwendet wird.
 jsp.dspace-admin.confirm-delete-mdfield.heading                 = L\u00F6schen des Metadatenfeldes: <code>{0}</code>
 jsp.dspace-admin.confirm-delete-mdfield.title                   = Metadatenfeld L\u00F6schen
 jsp.dspace-admin.confirm-delete-mdfield.warning                 = Dies f\u00FChrt zu einem Fehler, wenn es Items gibt, die dieses Metadatum mit einem Wert belegt haben.
@@ -268,6 +269,9 @@ jsp.dspace-admin.general.remove                                 = Entfernen
 jsp.dspace-admin.general.save                                   = Speichern
 jsp.dspace-admin.general.update                                 = Aktualisieren
 jsp.dspace-admin.general.upload                                 = Hochladen
+jsp.dspace-admin.group-confirm-delete.confirm                   = Sind Sie sicher, dass diese Gruppe gel\u00F6scht werden soll? Bitte beachten Sie, dass das L\u00F6schen der Gruppe auch alle mit der Gruppe verbundenen Rechte l\u00F6scht.
+jsp.dspace-admin.group-confirm-delete.heading                   = L\u00F6schen der Gruppe: {0}
+jsp.dspace-admin.group-confirm-delete.title                     = Gruppe l\u00F6schen
 jsp.dspace-admin.group-eperson-select.add                       = Benutzer hinzuf\u00FCgen
 jsp.dspace-admin.group-eperson-select.heading                   = W\u00E4hlen Sie einen Benutzer aus, um ihn der Gruppe {0} hinzuzuf\u00FCgen
 jsp.dspace-admin.group-eperson-select.title                     = Benutzerauswahl
@@ -490,6 +494,9 @@ jsp.general.searchfor                                           = <strong>Suche<
 jsp.general.subjects.button                                     = Schlagworte
 jsp.general.titles.button                                       = Titel
 jsp.general.untitled                                            = Ohne Titel
+jsp.general.update                                              = Aktualisieren
+jsp.general.without-contributor                                 = Anonym
+jsp.general.without-date                                        = Ohne Erscheinungsdatum
 jsp.help                                                        = Hilfe
 jsp.help.formats.contact1                                       = Bitte wenden Sie sich an Ihren
 jsp.help.formats.contact2                                       = DSpace-Administrator
@@ -592,6 +599,9 @@ jsp.mydspace.in-archive.title                                   = Ver\u00F6ffent
 jsp.mydspace.main.authoring                                     = Eigene unvollendete Ver\u00F6ffentlichungen
 jsp.mydspace.main.elem1                                         = Titel
 jsp.mydspace.main.elem2                                         = Ver\u00F6ffentlicht in
+jsp.mydspace.main.export.archive.title                          = Datei exportieren
+jsp.mydspace.main.export.error.title                            = Fehler beim Export
+jsp.mydspace.main.export.error.toolarge                         = Diese Export ist insgesamt zu gro\u00DF. Bitte wenden Sie sich an den Systemadministrator f\u00FCr weiterf\u00FChrende Informationen.
 jsp.mydspace.main.heading2                                      = Pers\u00F6nlicher Arbeitsbereich
 jsp.mydspace.main.heading3                                      = Aufgabenpool
 jsp.mydspace.main.heading4                                      = Unvollendete Ver\u00F6ffentlichungen
@@ -648,7 +658,11 @@ jsp.mydspace.remove-item.confirmation                           = Sind Sie siche
 jsp.mydspace.remove-item.remove.button                          = Ver\u00F6ffentlichung l\u00F6schen
 jsp.mydspace.remove-item.title                                  = Ver\u00F6ffentlichung l\u00F6schen
 jsp.mydspace.request.export.collection                          = Sammlung Exportieren
+jsp.mydspace.request.export.community                           = Bereich exportieren
 jsp.mydspace.request.export.item                                = Dokument Exportieren
+jsp.mydspace.request.export.migratecollection                   = Sammlung exportieren (migrieren)
+jsp.mydspace.request.export.migratecommunity                    = Bereich exportieren (migrieren)
+jsp.mydspace.request.export.migrateitem                         = Dokument exportieren (migrieren)
 jsp.mydspace.subscriptions.info1                                = Ihre Abonnements wurden aktualisiert.
 jsp.mydspace.subscriptions.info2                                = Um den Neuerscheinungsdienst f\u00FCr eine Sammlung zu aktivieren, gehen Sie bitte zur Homepage der entsprechenden Sammlung und klicken dort auf "Abonnieren".
 jsp.mydspace.subscriptions.info3                                = Hier ist die Liste der Sammlungen, f\u00FCr die Sie den Neuerscheinungsdienst abonniert haben. Es wird t\u00E4glich \u00FCberpr\u00FCft, ob es neue Ver\u00F6ffentlichungen in dieser Sammlung gibt. Ist dies der Fall, werden Sie per E-Mail benachrichtigt.
