Updated Messages_de.properties to revision 3642 of Messages.properties

--- a/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
+++ b/modules/dspace-api-lang/trunk/src/main/resources/Messages_de.properties
@@ -1294,6 +1294,7 @@ org.dspace.app.webui.servlet.admin.MetadataSchemaRegistryServlet.emptyname      
 org.dspace.app.webui.servlet.admin.MetadataSchemaRegistryServlet.emptynamespace = Der Namensraum darf nicht leer sein.
 org.dspace.app.webui.servlet.admin.MetadataSchemaRegistryServlet.illegalchar    = Die Kurzbezeichnung darf keine Leerzeichen, Unterstrich oder Punkte enthalten.
 org.dspace.app.webui.servlet.admin.MetadataSchemaRegistryServlet.nametolong     = Die Kurzbezeichnung darf maximal 32 Zeichen lang sein.
+org.dspace.authenticate.ShibAuthentication.title                                = Anmeldung via Shibboleth
 org.dspace.checker.ResultsLogger.bitstream-format                               = Dateiformat
 org.dspace.checker.ResultsLogger.bitstream-found                                = Datei gefunden
 org.dspace.checker.ResultsLogger.bitstream-id                                   = Datei ID
